--- a/environment.yml
+++ b/environment.yml
@@ -40,6 +40,7 @@ dependencies:
     - trio==0.22.0
     - pygments>=2.10,<2.12
     - pymdown-extensions<9.3
+    - pyspark>=3.3.1
     - pip:
           - azure-functions==1.12.0
           - databricks-sql-connector==2.2.1
