--- a/environment.yml
+++ b/environment.yml
@@ -41,9 +41,10 @@ dependencies:
     - pygments>=2.10,<2.12
     - pymdown-extensions<9.3
     - pyspark>=3.3.1
+    - openjdk=11.0.15    
+    - python-dotenv>=0.21.1
     - pip:
           - azure-functions==1.12.0
-          - databricks-sql-connector==2.2.1
-          - thrift==0.16.0
+          - databricks-sql-connector==2.3.0
           - strawberry-graphql[fastapi]==0.138.0
           - nest_asyncio==1.5.6
