--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,10 +86,11 @@ jobs:
       defaults:
         run:
           shell: bash -l {0}
-      runs-on: ubuntu-latest
       strategy:
         matrix:
-          python-version: ["3.8", "3.9", "3.10"]    
+          os: [ubuntu, macos, windows]
+          python-version: ["3.8", "3.9", "3.10", "3.11"]    
+      runs-on: ${{ matrix.os }}-latest        
       steps:
         - uses: actions/checkout@v3
           with:
