--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python==3.11
+    - python==3.10
     - mkdocs-material==8.2.4
     - mkdocs-material-extensions==1.0.3
     - jinja2==3.0.3
@@ -35,7 +35,7 @@ dependencies:
     - azure-identity==1.11.0
     - pyodbc==4.0.34
     - mkdocstrings==0.17.0
-    - fastapi==0.88.0
+    - fastapi==0.89.1
     - httpx==0.23.1
     - trio==0.22.0
     - pygments>=2.10,<2.12
@@ -44,6 +44,7 @@ dependencies:
     - openjdk=11.0.15    
     - python-dotenv>=0.21.1
     - pip:
+          - delta-spark==2.2.0
           - azure-functions==1.12.0
           - databricks-sql-connector==2.3.0
           - strawberry-graphql[fastapi]==0.138.0
