--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 		"vscode": {
 			"extensions": [
 				"ms-azuretools.vscode-azurefunctions",
-				"ms-azuretools.vscode-docker",
+				// "ms-azuretools.vscode-docker",
 				"ms-python.python",
 				"GitHub.vscode-pull-request-github",
 				"GitHub.copilot",
@@ -45,10 +45,11 @@
 
 	"remoteUser": "vscode",
 	"features": {
+		// "ghcr.io/devcontainers/features/docker-in-docker:1": {},
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/node:1": {},
 		"ghcr.io/devcontainers/features/terraform:1": {},
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		// "ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/java:1": {"version": "11"},
 		"ghcr.io/rocker-org/devcontainer-features/miniforge:1": {}
 	}
