--- a/environment.yml
+++ b/environment.yml
@@ -44,6 +44,7 @@ dependencies:
     - openjdk=11.0.15    
     - python-dotenv>=0.21.1
     - pip:
+          - dependency-injector>=4.41.0
           - delta-spark==2.2.0
           - azure-functions==1.12.0
           - databricks-sql-connector==2.3.0
