--- a/environment.yml
+++ b/environment.yml
@@ -48,5 +48,6 @@ dependencies:
           - delta-spark==2.2.0
           - azure-functions==1.12.0
           - databricks-sql-connector==2.3.0
+          - dbx==0.8.7
           - strawberry-graphql[fastapi]==0.138.0
           - nest_asyncio==1.5.6
