--- a/environment.yml
+++ b/environment.yml
@@ -27,8 +27,8 @@ dependencies:
     - pytest-mock==3.10.0
     - pytest-cov==4.0.0
     - pip==22.3.0
-    - turbodbc==4.5.5
-    - numpy==1.23.5
+    - turbodbc==4.5.6
+    - numpy>=1.23.4
     - pandas==1.5.2
     - oauthlib>=3.2.2
     - cryptography>=38.0.3
@@ -41,13 +41,13 @@ dependencies:
     - pygments>=2.10,<2.12
     - pymdown-extensions<9.3
     - pyspark>=3.3.1
-    - openjdk=11.0.15    
+    - delta-spark>=2.2.0
+    - openjdk==11.0.15    
     - python-dotenv>=0.21.1
     - pip:
-          - dependency-injector>=4.41.0
-          - delta-spark==2.2.0
-          - azure-functions==1.12.0
           - databricks-sql-connector==2.3.0
+          - dependency-injector>=4.41.0
+          - azure-functions==1.12.0
           - dbx==0.8.7
           - strawberry-graphql[fastapi]==0.138.0
           - nest_asyncio==1.5.6
