--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,13 +1,13 @@
 # Do not include azure-functions-worker as it may conflict with the Azure Functions platform
-azure-functions==1.12.0
-fastapi==0.85.1
+azure-functions==1.13.3
+fastapi==0.92.0
 nest_asyncio==1.5.6
-strawberry-graphql[fastapi]==0.138.0
-databricks-sql-connector==2.1.0
-azure-identity==1.11.0
+strawberry-graphql[fastapi]==0.159.0
+databricks-sql-connector==2.4.0
+azure-identity==1.12.0
 oauthlib>=3.2.2
 pandas==1.4.2
-numpy==1.23.5
+numpy>=1.23.4
 jinja2==3.0.3 
 jinjasql==0.1.8
 pytz==2022.6
